Updated the content

--- a/index.html
+++ b/index.html
@@ -37,18 +37,6 @@
 		<div id="languages" class="section">
 			<h2>Geek Speak</h2>
 
-			<div class="section legend">
-				<h3>Color Codes</h3>
-
-				<ul>
-					<li class="master">Master</li>
-					<li class="fluent">Fluent</li>
-					<li class="proficient">Proficient</li>
-					<li class="intermediate">Intermediate</li>
-					<li class="novice">Novice</li>
-				</ul>
-			</div><!-- .section -->
-
 			<div class="section fluent">
 				<h3>Web Standards</h3>
 
@@ -76,47 +64,41 @@
 			<div class="section fluent">
 				<h3>XHTML</h3>
 
-				<p class="description">Can quickly and easily create well-structured, <em>semantic</em> markup with a commanding use of nearly all good tags.</p>
+				<p class="description">Can quickly and easily create well-structured, <em>semantic</em> markup with a commanding use of the good tags.</p>
 			</div><!-- .section -->
 
 			<div class="section fluent">
 				<h3>CSS</h3>
 
-				<p class="description">While design is not my strongest suite, I do enjoy the implemention.</p>
+				<p class="description">Though I am no graphic designer, I am fully capable of executing other people&apos;s layouts. I have become the reference guide for any questions about valid XHTML and CSS.</p>
 			</div><!-- .section -->
 
 			<div class="section proficient">
 				<h3>SQL</h3>
 
-				<p class="description">Have no trouble viewing and manipulating the data, though some advanced or less-used features may require a quick documentation check.</p>
+				<p class="description">Very commfortable with the basics, such as designing normalized tables and selecting exactly the data I need. I have some experience with more advanced features like stored procedures.</p>
 			</div><!-- .section -->
 
-			<div class="section proficient">
+			<div class="section fluent">
 				<h3>PHP</h3>
 
-				<p class="description">Most familiar with the procedural aspect, though I have learned a lot about OOP since my introduction to PHP.</p>
+				<p class="description">Cut my Object-Oriented teeth on PHP. Now I can do anything with it that is required.</p>
 			</div><!-- .section -->
 
 			<div class="section intermediate">
 				<h3>Ruby</h3>
 
-				<p class="description">Very recently started to learn this. Am creating a personal website using Ruby on Rails.</p>
+				<p class="description">Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegent and expressive language, I would like for it to be my primary breadwinner.</p>
 			</div><!-- .section -->
 
 			<div class="section intermediate">
 				<h3>JavaScript</h3>
 
-				<p class="description">Have a clear understanding of the DOM. Hands-on experience is lacking, though I can usually wrangle existing JavaScript into what I need.</p>
+				<p class="description">jQuery has really introduced me to JavaScript. I wasn&apos;t much interested in JavaScript until about a month ago when I had a real need for it. Now I am going through a book to learn more.</p>
 			</div><!-- .section -->
 
 			<div class="section proficient">
-				<h3>C#</h3>
-
-				<p class="description"></p>
-			</div><!-- .section -->
-
-			<div class="section proficient">
-				<h3>Visual Basic</h3>
+				<h3>C# | Visual Basic</h3>
 
 				<p class="description"></p>
 			</div><!-- .section -->
