Updated content and styles. Added JavaScript reference

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<style type="text/css" media="all">@import url('styles/miscellaneous.css');</style>
 		<style type="text/css" media="print">@import url('styles/print.css');</style>
 
-		<script type="text/javascript" src=""></script>
+		<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+		<script type="text/javascript" src="application.js"></script>
 	</head>
 
 	<body>
@@ -76,7 +77,7 @@
 			<div class="section proficient">
 				<h3>SQL</h3>
 
-				<p class="description">Very commfortable with the basics, such as designing normalized tables and selecting exactly the data I need. I have some experience with more advanced features like stored procedures.</p>
+				<p class="description">Very commfortable with the basics, such as designing normalized tables and selecting exactly the data I need. I have some experience with more advanced features like stored procedures. Experienced with MySQL, MSSQL and Sqlite.</p>
 			</div><!-- .section -->
 
 			<div class="section fluent">
@@ -168,8 +169,7 @@
 				<span>released</span>
 
 				<ul>
-					<li>CSS</li>
-					<li>XHTML</li>
+					<li>Drupal (with some extra modules)</li>
 				</ul>
 				<p class="description">A friend is doing a church plant in Fuquay-Varina, so I put together a basic site using Drupal and off-the-shelf modules.</p>
 			</div><!-- .section -->
@@ -178,13 +178,26 @@
 				<h3>Novartis eCatalog</h3>
 
 				<span>discontinued</span>
-				<p class="description">The very first project I worked on. Initially </p>
+
+				<ul>
+					<li>PHP</li>
+					<li>MySQL</li>
+					<li>CSS</li>
+					<li>XHTML</li>
+				</ul>
+				<p class="description">This was an ordering system for a previous employer to aid with fulfillment with their largest client. The client has moved headquarters, and consequently this site is no longer needed.</p>
 			</div><!-- .section -->
 
 			<div class="section">
 				<h3>IsItTheWeekendYet?</h3>
 
 				<span>nearly finished</span>
+
+				<ul>
+					<li>Ruby on Rails</li>
+					<li>CSS</li>
+					<li>XHTML</li>
+				</ul>
 				<p class="description"></p>
 			</div><!-- .section -->
 
@@ -192,6 +205,12 @@
 				<h3>ScratchPad</h3>
 
 				<span>early stage</span>
+
+				<ul>
+					<li>Ruby on Rails</li>
+					<li>CSS</li>
+					<li>XHTML</li>
+				</ul>
 				<p class="description"></p>
 			</div><!-- .section -->
 
@@ -199,6 +218,10 @@
 				<h3>DataMapper plugins</h3>
 
 				<span>planned</span>
+
+				<ul>
+					<li>Ruby</li>
+				</ul>
 				<p class="description"></p>
 			</div><!-- .section -->
 
@@ -206,6 +229,11 @@
 				<h3>Relax MVC Framework</h3>
 
 				<span>never finished</span>
+
+				<ul>
+					<li>PHP</li>
+					<li>SQL</li>
+				</ul>
 				<p class="description"></p>
 			</div><!-- .section -->
 		</div><!-- #portfolio -->
