--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="section proficient">
 				<h3>SQL</h3>
 
-				<p class="description">Very commfortable with the basics, such as designing normalized tables and selecting exactly the data I need. I have some experience with more advanced features like stored procedures. Experienced with MySQL, MSSQL and Sqlite.</p>
+				<p class="description">Very comfortable with the basics, such as designing normalized tables and selecting exactly the data I need. I have some experience with more advanced features like stored procedures. Experienced with MySQL, MSSQL and Sqlite.</p>
 			</div><!-- .section -->
 
 			<div class="section fluent">
