--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			</div><!-- .section -->
 
 			<div class="section">
-				<h3>DataMapper plugins</h3>
+				<h3>DataMapper plugin</h3>
 
 				<span>planned</span>
 
