Moved some incomplete projects to the Other section

--- a/index.html
+++ b/index.html
@@ -202,30 +202,6 @@
 			</div><!-- .section -->
 
 			<div class="section">
-				<h3>ScratchPad</h3>
-
-				<span>early stage</span>
-
-				<ul>
-					<li>Ruby on Rails</li>
-					<li>CSS</li>
-					<li>XHTML</li>
-				</ul>
-				<p class="description"></p>
-			</div><!-- .section -->
-
-			<div class="section">
-				<h3>DataMapper plugin</h3>
-
-				<span>planned</span>
-
-				<ul>
-					<li>Ruby</li>
-				</ul>
-				<p class="description"></p>
-			</div><!-- .section -->
-
-			<div class="section">
 				<h3>Relax MVC Framework</h3>
 
 				<span>never finished</span>
@@ -293,6 +269,17 @@
 					<li>Adobe AIR</li>
 					<li>Graphic Design</li>
 				</ul>
+			</div><!-- .section -->
+
+			<div class="section">
+				<h3>Future Projects</h3>
+
+				<dl>
+					<dt>ScratchPad</dt>
+					<dd>I have some ambitious plans for a custom content management system, but I&apos;m still thinking about how I want it to work.</dd>
+					<dt>DataMapper plugin</dt>
+					<dd>For use in ScratchPad</dd>
+				</dl>
 			</div><!-- .section -->
 		</div><!-- #interests -->
 	</body>
