--- a/index.html
+++ b/index.html
@@ -131,8 +131,23 @@
 				<ul>
 					<li>CSS</li>
 					<li>XHTML</li>
+					<li>PHP</li>
 				</ul>
 				<p class="description"></p>
+			</div><!-- .section -->
+
+			<div class="section">
+				<h3><a href="http://www.isittheweekendyet.com/">IsItTheWeekendYet?</a></h3>
+
+				<span>released</span>
+
+				<ul>
+					<li>Ruby on Rails</li>
+					<li>CSS</li>
+					<li>JavaScript</li>
+					<li>XHTML</li>
+				</ul>
+				<p class="description">This is a fun little application, done as a learning exercise. It tells visitors how much time (hours, minutes, seconds) until the weekend starts or ends.</p>
 			</div><!-- .section -->
 
 			<div class="section">
@@ -186,19 +201,6 @@
 					<li>XHTML</li>
 				</ul>
 				<p class="description">This was an ordering system for a previous employer to aid with fulfillment with their largest client. The client has moved headquarters, and consequently this site is no longer needed.</p>
-			</div><!-- .section -->
-
-			<div class="section">
-				<h3>IsItTheWeekendYet?</h3>
-
-				<span>nearly finished</span>
-
-				<ul>
-					<li>Ruby on Rails</li>
-					<li>CSS</li>
-					<li>XHTML</li>
-				</ul>
-				<p class="description"></p>
 			</div><!-- .section -->
 
 			<div class="section">
