--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		<div id="about" class="section">
 			<h2>About Me</h2>
 
-			<p>I have always been fascinated with programming, looking for an opportunity to build a career with this passion. In the mean time, I have deployed several websites using open source web frameworks for friends and family, and even written programs for my graphing calculator. I have always tried to keep myself informed on the latest technologies. For the past several years I have run various GNU/Linux distributions, in addition to using, tweaking and troubleshooting Windows. I have system and network configuration experience (both personal and professional), and I am the first person many of my friends and coworkers turn to when faced with a computer challenge, be it Windows-related, software issues or hardware configuration.</p>
+			<p>I have always been fascinated with programming, looking for an opportunity to build a career with this passion. In the mean time, I have deployed several websites using open source web frameworks for friends and family, and even written programs for my graphing calculator. I have always tried to keep myself informed on the latest technologies. For the past several years I have run various GNU/Linux distributions, in addition to supporting and troubleshooting Windows. I have system and network configuration experience (both personal and professional), and I am the first person many of my friends and coworkers turn to when faced with a computer challenge, be it Windows-related, software issues or hardware configuration.</p>
+			<p>My local church family is Calvary Chapel Cary. I help with the </p>
 		</div><!-- #about -->
 
 		<div id="languages" class="section">
@@ -95,7 +96,7 @@
 			<div class="section intermediate">
 				<h3>JavaScript</h3>
 
-				<p class="description">jQuery has really introduced me to JavaScript. I wasn&apos;t much interested in JavaScript until about a month ago when I had a real need for it. Now I am going through a book to learn more.</p>
+				<p class="description">jQuery has really introduced me to JavaScript. I wasn&apos;t much interested in JavaScript until recently when I had a real need for it. Now I am going through a book to learn more.</p>
 			</div><!-- .section -->
 
 			<div class="section proficient">
@@ -116,11 +117,11 @@
 				<ul>
 					<li>ASP.NET</li>
 					<li>C#</li>
-					<li>jQuery</li>
+					<li>JavaScript (jQuery)</li>
 					<li>CSS</li>
 					<li>XHTML</li>
 				</ul>
-				<p class="description"></p>
+				<p class="description">The current design was done by an outside side consultant. When I was given responsibility to maintain it, I streamlined the markup, solidified the styles and ported the existing (multiple) flavors of JavaScript to jQuery.</p>
 			</div><!-- .section -->
 
 			<div class="section">
@@ -133,7 +134,7 @@
 					<li>XHTML</li>
 					<li>PHP</li>
 				</ul>
-				<p class="description"></p>
+				<p class="description">When I started work on this site, it was a tangled mess of Dreamweaver-generated spaghetti code and no external style sheets. I converted it to (almost) valid, semantic markup and extracted the styles into separate files. Also hooked into a third-party payment service.</p>
 			</div><!-- .section -->
 
 			<div class="section">
@@ -161,21 +162,21 @@
 					<li>MySQL</li>
 					<li>Ruby on Rails</li>
 				</ul>
-				<p class="description"></p>
+				<p class="description">A simple website for a friend. This site has a simple contact form for bookings and an artist listing.</p>
 			</div><!-- .section -->
 
 			<div class="section">
-				<h3>2011</h3>
+				<h3>Project 002011</h3>
 
 				<span>released</span>
 
 				<ul>
-					<li>ASP.NET</li>
-					<li>VB</li>
 					<li>CSS</li>
 					<li>XHTML</li>
+					<li>ASP.NET</li>
+					<li>VB</li>
 				</ul>
-				<p class="description"></p>
+				<p class="description">This project started out as a set of complex Photoshop mockups. I was the only person at my company and our client company who was able to actually implement the design with clean markup and style sheets.</p>
 			</div><!-- .section -->
 
 			<div class="section">
@@ -212,7 +213,7 @@
 					<li>PHP</li>
 					<li>SQL</li>
 				</ul>
-				<p class="description"></p>
+				<p class="description">At the time I was doing a lot of PHP programming for work. I couldn&apos;t find an MVC framework that I liked, so I started to roll my own. I was able to take it to an early beta, but then other projects got in the way. In the end I just stopped working on it; I believe the project has unfortunately remained stagnate since then.</p>
 			</div><!-- .section -->
 		</div><!-- #portfolio -->
 
@@ -227,17 +228,24 @@
 			</div><!-- .section -->
 
 			<div class="section">
+				<h3>Presentation Strategies: Developer</h3>
+
+				<span>2007.11 - 2008.11</span>
+				<p class="description">Shortly after Cisys hired me, they contracted me to a partner/vendor. My time at PStrat was spent supporting existing projects and building new products. Most things I worked on were internal or had set expiration dates.</p>
+			</div><!-- .section -->
+
+			<div class="section">
 				<h3>Sir Speedy Cary: Mail Room Supervisor</h3>
 
 				<span>2005.09 - 2007.10</span>
-				<p class="description">Address and prepare letters and postcards for bulk mail. Cut paper, run deliveries, collate, hole punch and make computer recommendations. Built a database-driven web application using PHP for one of our larger clients. Extra features and polish were left undone due to time and budget constraints.</p>
+				<p class="description">Address and prepare letters and postcards for bulk mail. Cut paper, run deliveries, collate, hole punch and make computer recommendations. Built a database-driven web application using PHP for one of our larger clients. (See Novartis eCatalog above.) Extra features and polish were left undone due to time and budget constraints.</p>
 			</div><!-- .section -->
 
 			<div class="section">
 				<h3>Target: Electronics Department</h3>
 
 				<span>2005.03 - 2005.09</span>
-				<p class="description">Assisted customers and straightened the shelves.</p>
+				<p class="description">Genesis Marketing Group was dissolved, and I needed something to live off of. Target floated me until God provided more suitable means of employment.</p>
 			</div><!-- .section -->
 
 			<div class="section">
