Added link to Allergan project

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			</div><!-- .section -->
 
 			<div class="section">
-				<h3>Project 002011</h3>
+				<h3><a href="http://allergan.pstrat.com/">Allergan iN-Form Portal</a></h3>
 
 				<span>released</span>
 
