--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 		<div id="contact" class="section">
 			<h2>Contact</h2>
 
-			<address class="street">1323 Park Summit Blvd<br />Apex, NC 27523</address>
-			<address class="email"><a href="mailto:thomas@ravinggenius.com">thomas@ravinggenius.com</a></address>
-			<span class="phone_number">919 449.6305</span>
+			<address class="street">Apex, NC 27502</address>
+			<address class="email"><a href="mailto:rg+hireme@ravinggenius.com">rg+hireme@ravinggenius.com</a></address>
+			<span class="phone_number">919 2000 TFI</span>
 		</div><!-- #contact -->
 
 		<div id="about" class="section">
 			<h2>About Me</h2>
 
 			<p>I have always been fascinated with programming, looking for an opportunity to build a career with this passion. In the mean time, I have deployed several websites using open source web frameworks for friends and family, and even written programs for my graphing calculator. I have always tried to keep myself informed on the latest technologies. For the past several years I have run various GNU/Linux distributions, in addition to supporting and troubleshooting Windows. I have system and network configuration experience (both personal and professional), and I am the first person many of my friends and coworkers turn to when faced with a computer challenge, be it Windows-related, software issues or hardware configuration.</p>
-			<p>My local church family is Calvary Chapel Cary. I help with the </p>
+			<p>My local church family is Calvary Chapel Cary. I help with the youth group.</p>
 		</div><!-- #about -->
 
 		<div id="languages" class="section">
@@ -143,7 +143,7 @@
 				<span>released</span>
 
 				<ul>
-					<li>Ruby on Rails</li>
+					<li>Sinatra</li>
 					<li>CSS</li>
 					<li>JavaScript</li>
 					<li>XHTML</li>
@@ -185,7 +185,7 @@
 				<span>released</span>
 
 				<ul>
-					<li>Drupal (with some extra modules)</li>
+					<li>Drupal (plus modules)</li>
 				</ul>
 				<p class="description">A friend is doing a church plant in Fuquay-Varina, so I put together a basic site using Drupal and off-the-shelf modules.</p>
 			</div><!-- .section -->
@@ -207,7 +207,7 @@
 			<div class="section">
 				<h3>Relax MVC Framework</h3>
 
-				<span>never finished</span>
+				<span>pending</span>
 
 				<ul>
 					<li>PHP</li>
