--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Resume | Raving Genius</title>
 
+		<style type="text/css" media="all">@import url('vendor/jquery/css/smoothness/jquery-ui-1.7.2.css');</style>
 		<style type="text/css" media="all">@import url('styles/reset.css');</style>
 		<style type="text/css" media="all">@import url('styles/structure.css');</style>
 		<style type="text/css" media="all">@import url('styles/color.css');</style>
@@ -11,8 +12,9 @@
 		<style type="text/css" media="all">@import url('styles/miscellaneous.css');</style>
 		<style type="text/css" media="print">@import url('styles/print.css');</style>
 
-		<script type="text/javascript" src="http://www.google.com/jsapi"></script>
-		<script type="text/javascript" src="application.js"></script>
+		<script type="text/javascript" src="vendor/jquery/js/jquery-1.3.2.min.js"></script>
+		<script type="text/javascript" src="vendor/jquery/js/jquery-ui-1.7.2.min.js"></script>
+		<script type="text/javascript" src="scripts/application.js"></script>
 	</head>
 
 	<body>
