--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="section fluent">
 				<h3>Freedom | Open Source</h3>
 
-				<p class="description">I am a firm believer in using free software whenever possible, and I encourage my friends to do the same. I have been happily using GNU/Linux at home for many years.</p>
+				<p class="description">I am a firm believer in using free software whenever possible, and I encourage my friends to do the same. I have been happily using GNU/Linux at home for many years. I&apos;ve even got my wife using it.</p>
 			</div><!-- .section -->
 
 			<div class="section proficient">
