Updated Geek Speak section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 			<h2>About Me</h2>
 
 			<p>I have always been fascinated with programming, looking for an opportunity to build a career with this passion. In the mean time, I have deployed several websites using open source web frameworks for friends and family, and even written programs for my graphing calculator. I have always tried to keep myself informed on the latest technologies. For the past several years I have run various GNU/Linux distributions, in addition to supporting and troubleshooting Windows. I have system and network configuration experience (both personal and professional), and I am the first person many of my friends and coworkers turn to when faced with a computer challenge, be it Windows-related, software issues or hardware configuration.</p>
-			<p>My local church family is Calvary Chapel Cary. I help with the youth group.</p>
 		</div><!-- #about -->
 
 		<div id="languages" class="section">
@@ -102,9 +101,9 @@
 			</div><!-- .section -->
 
 			<div class="section proficient">
-				<h3>C# | Visual Basic</h3>
+				<h3>C# | Visual Basic | .NET</h3>
 
-				<p class="description"></p>
+				<p class="description">I have been using C# and VB.NET for two years (mostly C#). During that time I have pushed myself to learn more and have become quite comfortable developing with C# and .NET in general.</p>
 			</div><!-- .section -->
 		</div><!-- #languages -->
 
@@ -142,7 +141,7 @@
 			<div class="section">
 				<h3><a href="http://www.isittheweekendyet.com/">IsItTheWeekendYet?</a></h3>
 
-				<span>released</span>
+				<span>offline, awaiting improvements</span>
 
 				<ul>
 					<li>Sinatra</li>
