Updated Work Experience

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 				<h3>Cisys, Inc: Developer</h3>
 
 				<span>2007.10 - present</span>
-				<p class="description"></p>
+				<p class="description">I have worked on many projects while at Cisys, most of which are for large enterprise-level clients. As the resident web standards guru, I am the go-to guy for all things CSS and HTML. Most of the products I have built have been non-public, client-specific, but some of the public sites are highlighted above. Lately I have been working on a SharePoint based service application. I design and build (normalized) databases and high-quality web applications.</p>
 			</div><!-- .section -->
 
 			<div class="section">
