--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<h2>Portfolio</h2>
 
 			<div class="section">
-				<h3><a href="http://www.cisys.com/">Cisys, Inc</a></h3>
+				<h3><a href="http://www.cisys.com/">Cisys Life Sciences</a></h3>
 
 				<span>released</span>
 
@@ -222,7 +222,7 @@
 			<h2>Work Experience</h2>
 
 			<div class="section">
-				<h3>Cisys, Inc: Developer</h3>
+				<h3>Cisys Life Sciences: Developer</h3>
 
 				<span>2007.10 - present</span>
 				<p class="description">I have worked on many projects while at Cisys, most of which are for large enterprise-level clients. As the resident web standards guru, I am the go-to guy for all things CSS and HTML. Most of the products I have built have been non-public, client-specific, but some of the public sites are highlighted above. Lately I have been working on a SharePoint based service application. I design and build (normalized) databases and high-quality web applications.</p>
