--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<li>CSS</li>
 					<li>XHTML</li>
 				</ul>
-				<p class="description">The current design was done by an outside side consultant. When I was given responsibility to maintain it, I streamlined the markup, solidified the styles and ported the existing (multiple) flavors of JavaScript to jQuery.</p>
+				<p class="description">The current design was done by an outside consultant. When I was given responsibility to maintain it, I streamlined the markup, solidified the styles and ported the existing (multiple) flavors of JavaScript to jQuery.</p>
 			</div><!-- .section -->
 
 			<div class="section">
