Updated Geek Speak

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<p class="description">jQuery has really introduced me to JavaScript. I wasn&apos;t much interested in JavaScript until recently when I had a real need for it. Now I am going through a book to learn more.</p>
 			</div><!-- .section -->
 
-			<div class="section proficient">
+			<div class="section fluent">
 				<h3>C# | Visual Basic | .NET</h3>
 
 				<p class="description">I have been using C# and VB.NET for two years (mostly C#). During that time I have pushed myself to learn more and have become quite comfortable developing with C# and .NET in general.</p>
