Updated Geek Speak

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<p class="description">Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegent and expressive language, I would like for it to be my primary breadwinner.</p>
 			</div><!-- .section -->
 
-			<div class="section intermediate">
+			<div class="section proficient">
 				<h3>JavaScript</h3>
 
 				<p class="description">jQuery has really introduced me to JavaScript. I wasn&apos;t much interested in JavaScript until recently when I had a real need for it. Now I am going through a book to learn more.</p>
