--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
 		<title>Resume | Raving Genius</title>
@@ -28,7 +28,7 @@
 
 			<address class="street">Apex, NC 27502</address>
 			<address class="email"><a href="mailto:rg+hireme@ravinggenius.com">rg+hireme@ravinggenius.com</a></address>
-			<span class="phone_number">919 2000 TFI</span>
+			<span class="phone_number">919 449.6305</span>
 		</div><!-- #contact -->
 
 		<div id="about" class="section">
