Updated content (mostly removed cruft)

--- a/index.html
+++ b/index.html
@@ -41,39 +41,28 @@
 			<h2>Geek Speak</h2>
 
 			<div class="section fluent">
-				<h3>Web Standards</h3>
+				<h3>XHTML | CSS</h3>
 
-				<p class="description">Whenever possible I validate against the strictest (published) XHTML. I structure markup with div tags (with semantic identifiers) and leave presentation in CSS. If necessary I will use conditional comments to target Internet Explorer with style overrides.</p>
+				<p class="description">Can quickly and easily create well-structured, <em>semantic</em> markup with a commanding use of the good tags.</p>
+				<p class="description">Though I am no graphic designer, I am fully capable of executing other people&apos;s layouts. I have become the reference guide for any questions about valid XHTML and CSS.</p>
 			</div><!-- .section -->
 
 			<div class="section fluent">
-				<h3>Freedom | Open Source</h3>
+				<h3>C# | Visual Basic | .NET</h3>
 
-				<p class="description">I enjoy using free software whenever possible, and I encourage my friends to do the same. I have been happily using GNU/Linux at home for many years. I&apos;ve even got my wife using it. (She likes it.)</p>
+				<p class="description">I have been using C# and VB.NET for two years (mostly C#). During that time I have pushed myself to learn more and have become quite comfortable developing with C# and .NET in general.</p>
 			</div><!-- .section -->
 
 			<div class="section proficient">
-				<h3>git | Subversion</h3>
+				<h3>Ruby</h3>
 
-				<p class="description">I use git at home for personal or open-source projects and Subversion (via TortoiseSVN) at work. I much prefer git for the flexiblity it provides.</p>
+				<p class="description">Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegent and expressive language, I would like for it to be my primary breadwinner.</p>
 			</div><!-- .section -->
 
-			<div class="section fluent">
-				<h3>Security</h3>
+			<div class="section proficient">
+				<h3>JavaScript</h3>
 
-				<p class="description">I strive to remain updated on all web application security issues, and then code defensively.</p>
-			</div><!-- .section -->
-
-			<div class="section fluent">
-				<h3>XHTML</h3>
-
-				<p class="description">Can quickly and easily create well-structured, <em>semantic</em> markup with a commanding use of the good tags.</p>
-			</div><!-- .section -->
-
-			<div class="section fluent">
-				<h3>CSS</h3>
-
-				<p class="description">Though I am no graphic designer, I am fully capable of executing other people&apos;s layouts. I have become the reference guide for any questions about valid XHTML and CSS.</p>
+				<p class="description">jQuery has really introduced me to JavaScript. I wasn&apos;t much interested in JavaScript until recently when I had a real need for it. Now I am going through a book to learn more.</p>
 			</div><!-- .section -->
 
 			<div class="section proficient">
@@ -87,31 +76,13 @@
 
 				<p class="description">Cut my Object-Oriented teeth on PHP. Now I can do anything with it that is required.</p>
 			</div><!-- .section -->
-
-			<div class="section intermediate">
-				<h3>Ruby</h3>
-
-				<p class="description">Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegent and expressive language, I would like for it to be my primary breadwinner.</p>
-			</div><!-- .section -->
-
-			<div class="section proficient">
-				<h3>JavaScript</h3>
-
-				<p class="description">jQuery has really introduced me to JavaScript. I wasn&apos;t much interested in JavaScript until recently when I had a real need for it. Now I am going through a book to learn more.</p>
-			</div><!-- .section -->
-
-			<div class="section fluent">
-				<h3>C# | Visual Basic | .NET</h3>
-
-				<p class="description">I have been using C# and VB.NET for two years (mostly C#). During that time I have pushed myself to learn more and have become quite comfortable developing with C# and .NET in general.</p>
-			</div><!-- .section -->
 		</div><!-- #languages -->
 
 		<div id="portfolio" class="section">
 			<h2>Portfolio</h2>
 
 			<div class="section">
-				<h3><a href="http://www.cisys.com/">Cisys Life Sciences</a></h3>
+				<h3><a href="http://www.cisys.com/">CISYS | Life Sciences</a></h3>
 
 				<span>released</span>
 
@@ -136,20 +107,6 @@
 					<li>PHP</li>
 				</ul>
 				<p class="description">When I started work on this site, it was a tangled mess of Dreamweaver-generated spaghetti code and no external style sheets. I converted it to (almost) valid, semantic markup and extracted the styles into separate files. Also hooked into a third-party payment service.</p>
-			</div><!-- .section -->
-
-			<div class="section">
-				<h3><a href="http://www.isittheweekendyet.com/">IsItTheWeekendYet?</a></h3>
-
-				<span>offline, awaiting improvements</span>
-
-				<ul>
-					<li>Sinatra</li>
-					<li>CSS</li>
-					<li>JavaScript</li>
-					<li>XHTML</li>
-				</ul>
-				<p class="description">This is a fun little application, done as a learning exercise. It tells visitors how much time (hours, minutes, seconds) until the weekend starts or ends.</p>
 			</div><!-- .section -->
 
 			<div class="section">
@@ -204,25 +161,13 @@
 				</ul>
 				<p class="description">This was an ordering system for a previous employer to aid with fulfillment with their largest client. The client has moved headquarters, and consequently this site is no longer needed.</p>
 			</div><!-- .section -->
-
-			<div class="section">
-				<h3>Relax MVC Framework</h3>
-
-				<span>pending</span>
-
-				<ul>
-					<li>PHP</li>
-					<li>SQL</li>
-				</ul>
-				<p class="description">At the time I was doing a lot of PHP programming for work. I couldn&apos;t find an MVC framework that I liked, so I started to roll my own. I was able to take it to an early beta, but then other projects got in the way. In the end I just stopped working on it; I believe the project has unfortunately remained stagnate since then.</p>
-			</div><!-- .section -->
 		</div><!-- #portfolio -->
 
 		<div id="experience" class="section">
 			<h2>Work Experience</h2>
 
 			<div class="section">
-				<h3>Cisys Life Sciences: Developer</h3>
+				<h3>CISYS: Developer</h3>
 
 				<span>2007.10 - present</span>
 				<p class="description">I have worked on many projects while at Cisys, most of which are for large enterprise-level clients. As the resident web standards guru, I am the go-to guy for all things CSS and HTML. Most of the products I have built have been non-public, client-specific, but some of the public sites are highlighted above. Lately I have been working on a SharePoint based service application. I design and build (normalized) databases and high-quality web applications.</p>
@@ -240,20 +185,6 @@
 
 				<span>2005.09 - 2007.10</span>
 				<p class="description">Address and prepare letters and postcards for bulk mail. Cut paper, run deliveries, collate, hole punch and make computer recommendations. Built a database-driven web application using PHP for one of our larger clients. (See Novartis eCatalog above.) Extra features and polish were left undone due to time and budget constraints.</p>
-			</div><!-- .section -->
-
-			<div class="section">
-				<h3>Target: Electronics Department</h3>
-
-				<span>2005.03 - 2005.09</span>
-				<p class="description">Genesis Marketing Group was dissolved, and I needed something to live off of. Target floated me until God provided more suitable means of employment.</p>
-			</div><!-- .section -->
-
-			<div class="section">
-				<h3>Genesis Marketing Group: Data Processor</h3>
-
-				<span>2004.06 - 2004.12</span>
-				<p class="description">GMG sold subprime address lists to mortgage companies across America. It was my job to make sure they got the proper data. I also coordinated bulk mailings with these lists for our clients.</p>
 			</div><!-- .section -->
 		</div><!-- #experience -->
 
