Moved stylesheet reset to vendor folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>Resume | Raving Genius</title>
 
 		<style type="text/css" media="all">@import url('vendor/jquery/css/smoothness/jquery-ui-1.7.2.css');</style>
-		<style type="text/css" media="all">@import url('styles/reset.css');</style>
+		<style type="text/css" media="all">@import url('vendor/reset.css');</style>
+
 		<style type="text/css" media="all">@import url('styles/structure.css');</style>
 		<style type="text/css" media="all">@import url('styles/color.css');</style>
 		<style type="text/css" media="all">@import url('styles/typography.css');</style>
