--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="section fluent">
 				<h3>PHP</h3>
 
-				<p class="description">Cut my Object-Oriented teeth on PHP. Now I can do anything with it that is required.</p>
+				<p class="description">Cut my Object-Oriented teeth on PHP. Now I can do anything with it that is required. I coded a nice MVC framework for work with PHP, but it never got used.</p>
 			</div><!-- .section -->
 		</div><!-- #languages -->
 
