--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="section proficient">
 				<h3>Ruby</h3>
 
-				<p class="description">Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegent and expressive language, I would like for it to be my primary breadwinner.</p>
+				<p class="description">Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegent and expressive language, I would like for it to be my primary breadwinner. I have direct experience with Rails, Merb and Sinatra.</p>
 			</div><!-- .section -->
 
 			<div class="section proficient">
