--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 		<style type="text/css" media="all">@import url('vendor/jquery/css/smoothness/jquery-ui-1.7.2.css');</style>
 		<style type="text/css" media="all">@import url('vendor/reset.css');</style>
 
-		<style type="text/css" media="all">@import url('styles/structure.css');</style>
-		<style type="text/css" media="all">@import url('styles/color.css');</style>
-		<style type="text/css" media="all">@import url('styles/typography.css');</style>
-		<style type="text/css" media="all">@import url('styles/miscellaneous.css');</style>
+		<style type="text/css" media="all">@import url('styles/application.css');</style>
 		<style type="text/css" media="print">@import url('styles/print.css');</style>
 
 		<script type="text/javascript" src="vendor/jquery/js/jquery-1.3.2.min.js"></script>
